--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,10 @@
-
+eureka:
+    client:
+       register-with-eureka: true
+          fetch-registery: true
+           service-url:  
+             defaultZone: http://9localhost:8761//eureka
+           instance:
+              hostname: localhost
+           
+              
